Multi-colum custom DropDown menu IE overlap fix
Changing position:initial to position:static fixes a menu overlap that is occurring in IE 11 without affecting the performance in Chrome.

I'm new at web development, so my apologies if this change is no good for reasons I may not foresee. I figured I'd share the fix instead of just updating my userstyle.css silently :) .

--- a/css/template.less
+++ b/css/template.less
@@ -517,7 +517,7 @@ ul.btn-group {
 .dropdown-row {
 
   > ul {
-    position: initial;
+    position: static;
     border: 0px;
     box-shadow: initial;
   }
